# aula_17_sqlalchemy

./: README.md  desafio.db  main.py  pyproject.toml
examples/: exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py
sql/: preco_total_por_fornecedor.sql
src/: tables.py
