[tool.poetry]
name = "aula-17-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["A-Quaglia <augustoquaglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
black = "^24.4.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "black . && isort ."